--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VUE_APP_BASE_API = 'https://vue-typescript-admin-mock-server.armour.now.sh/mock-api/v1/'
+APOLLO_AUTHORIZATION_HEADER = 'Nx6\0v%N++\Oq&mNRwJ7iomOlzoYn'
