--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.15",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.0.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
-    "vue-class-component": "^7.1.0",
+    "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.1.2",
     "vue-svgicon": "^3.2.6",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/js-cookie": "^2.2.2",
+    "@types/lodash": "^4.14.150",
     "@types/node": "~12.12.23",
     "@types/nprogress": "^0.2.0",
     "@types/webpack-env": "^1.14.0",
