--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VUE_APP_BASE_API = 'https://vue-typescript-admin-mock-server.armour.now.sh/mock-api/v1/'
-APOLLO_AUTHORIZATION_HEADER = 'Nx6\0v%N++\Oq&mNRwJ7iomOlzoYn'
+VUE_APP_APOLLO_AUTHORIZATION_HEADER = 'Nx6\0v%N++\Oq&mNRwJ7iomOlzoYn'
+HAHA = 'JJJ'
