[EXCHANGES] styles for #1 #2 #3 #4 #5 #6 #7

--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/underscore": "^1.10.0",
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
+    "moment-range": "^4.0.2",
+    "moment-range-split": "^1.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.0.0",
     "register-service-worker": "^1.6.2",
+    "underscore": "^1.10.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.17.3",
