--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/underscore": "^1.10.0",
     "axios": "^0.19.0",
+    "echarts": "^4.8.0",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
@@ -27,6 +28,8 @@
     "underscore": "^1.10.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.2.3",
+    "vue-echarts": "^5.0.0-beta.0",
+    "vue-echarts-ts": "^0.1.1",
     "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.1.2",
@@ -36,6 +39,7 @@
     "vuex-module-decorators": "^0.10.1"
   },
   "devDependencies": {
+    "@types/echarts": "^4.6.4",
     "@types/jest": "^24.0.18",
     "@types/js-cookie": "^2.2.2",
     "@types/lodash": "^4.14.150",
