--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VUE_APP_BASE_API = 'https://vue-typescript-admin-mock-server.armour.now.sh/mock-api/v1/'
 VUE_APP_APOLLO_AUTHORIZATION_HEADER = 'Nx6\0v%N++\Oq&mNRwJ7iomOlzoYn'
 HAHA = 'JJJ'
-VUE_APP_APOLLO_API_HOST = 'https://apollo.atomicwallet.io'
+VUE_APP_APOLLO_API_HOST = 'localhost:3003'
