--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@types/underscore": "^1.10.0",
-    "axios": "^0.19.0",
-    "echarts": "^4.8.0",
-    "element-ui": "^2.12.0",
+    "@types/underscore": "^1.10.24",
+    "axios": "^0.19.2",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.25.3",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "moment-range": "^4.0.2",
     "moment-range-split": "^1.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.0.0",
-    "register-service-worker": "^1.6.2",
-    "underscore": "^1.10.2",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.2.3",
+    "register-service-worker": "^1.7.1",
+    "underscore": "^1.11.0",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-echarts-ts": "^0.1.1",
-    "vue-i18n": "^8.17.3",
-    "vue-property-decorator": "^8.2.2",
-    "vue-router": "^3.1.2",
-    "vue-svgicon": "^3.2.6",
-    "vuex": "^3.1.1",
+    "vue-i18n": "^8.22.0",
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.4.6",
+    "vue-svgicon": "^3.2.9",
+    "vuex": "^3.5.1",
     "vuex-class": "^0.3.2",
     "vuex-module-decorators": "^0.10.1"
   },
   "devDependencies": {
-    "@types/echarts": "^4.6.4",
-    "@types/jest": "^24.0.18",
-    "@types/js-cookie": "^2.2.2",
-    "@types/lodash": "^4.14.150",
-    "@types/node": "~12.12.23",
+    "@types/echarts": "^4.8.1",
+    "@types/jest": "^24.9.1",
+    "@types/js-cookie": "^2.2.6",
+    "@types/lodash": "^4.14.162",
+    "@types/node": "^12.12.67",
     "@types/nprogress": "^0.2.0",
-    "@types/webpack-env": "^1.14.0",
+    "@types/webpack-env": "^1.15.3",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-e2e-cypress": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
@@ -55,21 +55,21 @@
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.2.2",
     "eslint-plugin-vue": "^5.2.3",
-    "fibers": "^4.0.1",
+    "fibers": "^4.0.3",
     "jest": "^24.9.0",
-    "sass": "^1.22.10",
+    "sass": "^1.27.0",
     "sass-loader": "^7.3.1",
     "style-resources-loader": "^1.2.1",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.3.0",
     "typescript": "3.6.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.3"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.2"
   }
 }
